syntax = "proto3";

package hrms.employee.v1;

service EmployeeService {
  rpc GetEmployee(GetEmployeeRequest) returns (EmployeeResponse);
}

message GetEmployeeRequest {
  string id = 1;
}

message EmployeeResponse {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string department = 5;
}
